fix: delete doctor cascade